k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sftp-manager-service
  namespace: sftp-manager
spec:
  selector:
    app: sftp-manager
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
